@startuml
' ER Diagram - Sistema de Medicamentos UBS
' Paste into VSCode PlantUML and export PNG/SVG

hide circle
skinparam linetype ortho
skinparam entityBorderColor #555555
skinparam entityFontSize 12

' =========================
' ORGANIZACIONAL (TENANT/UBS)
' =========================
entity "tenants" as tenants {
  *id : uuid <<PK>>
  --
  name : text
  created_at : timestamp
  updated_at : timestamp
}

entity "ubs" as ubs {
  *id : uuid <<PK>>
  --
  tenant_id : uuid <<FK>>
  name : text
  cnes : text
  active : bool
  --
  address_street : text
  address_number : text
  address_neighborhood : text
  address_city : text
  address_state : char(2)
  address_zip : text
  address_complement : text
  --
  created_at : timestamp
  updated_at : timestamp
}

entity "stock_locations" as stock_locations {
  *id : uuid <<PK>>
  --
  ubs_id : uuid <<FK>>
  name : text
  active : bool
  created_at : timestamp
  updated_at : timestamp
}

tenants ||--o{ ubs : has
ubs ||--o{ stock_locations : has

' =========================
' USUÁRIOS + RBAC FINO
' =========================
entity "users" as users {
  *id : uuid <<PK>>
  --
  username : text <<UQ>>
  password_hash : text
  full_name : text
  active : bool
  created_at : timestamp
  updated_at : timestamp
}

entity "roles" as roles {
  *id : uuid <<PK>>
  --
  code : text <<UQ>>
  name : text
}

entity "permissions" as permissions {
  *id : uuid <<PK>>
  --
  code : text <<UQ>>
  name : text
  description : text
  created_at : timestamp
  updated_at : timestamp
}

entity "role_permissions" as role_permissions {
  *id : uuid <<PK>>
  --
  role_id : uuid <<FK>>
  permission_id : uuid <<FK>>
  created_at : timestamp
  --
  (role_id, permission_id) <<UQ>>
}

entity "user_ubs_roles" as user_ubs_roles {
  *id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  ubs_id : uuid <<FK>>
  role_id : uuid <<FK>>
  active : bool
  created_at : timestamp
  updated_at : timestamp
}

entity "user_permissions" as user_permissions {
  *id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  ubs_id : uuid <<FK>>  ' nullable (global or per UBS)
  permission_id : uuid <<FK>>
  effect : text  ' ALLOW / DENY
  created_at : timestamp
  --
  (user_id, ubs_id, permission_id) <<UQ>>
}

users ||--o{ user_ubs_roles : assigned
ubs ||--o{ user_ubs_roles : scope
roles ||--o{ user_ubs_roles : role

roles ||--o{ role_permissions : grants
permissions ||--o{ role_permissions : includes

users ||--o{ user_permissions : override
ubs ||--o{ user_permissions : scope
permissions ||--o{ user_permissions : override_perm

' =========================
' CATÁLOGO + LOTES
' =========================
entity "medicines" as medicines {
  *id : uuid <<PK>>
  --
  tenant_id : uuid <<FK>>
  name : text
  presentation : text
  unit : text
  active : bool
  created_at : timestamp
  updated_at : timestamp
}

entity "batches" as batches {
  *id : uuid <<PK>>
  --
  tenant_id : uuid <<FK>>
  medicine_id : uuid <<FK>>
  batch_number : text
  expiry_date : date
  manufacturer : text
  created_at : timestamp
  updated_at : timestamp
  --
  (tenant_id, medicine_id, batch_number, expiry_date) <<UQ>>
}

tenants ||--o{ medicines : owns
tenants ||--o{ batches : owns
medicines ||--o{ batches : has

' =========================
' ESTOQUE (SALDO) + MOVIMENTAÇÕES
' =========================
entity "stock_balances" as stock_balances {
  *id : uuid <<PK>>
  --
  ubs_id : uuid <<FK>>
  stock_location_id : uuid <<FK>>
  batch_id : uuid <<FK>>
  quantity : numeric
  updated_at : timestamp
  --
  (stock_location_id, batch_id) <<UQ>>
}

entity "stock_movements" as stock_movements {
  *id : uuid <<PK>>
  --
  ubs_id : uuid <<FK>>
  movement_type : text  ' ENTRADA/SAIDA/TRANSFERENCIA/AJUSTE/ESTORNO
  source_location_id : uuid <<FK>>  ' nullable
  target_location_id : uuid <<FK>>  ' nullable
  reference_type : text  ' NF/DISPENSACAO/INVENTARIO/MANUAL
  reference_id : uuid
  reason : text
  created_by_user_id : uuid <<FK>>
  created_at : timestamp
}

entity "stock_movement_items" as stock_movement_items {
  *id : uuid <<PK>>
  --
  stock_movement_id : uuid <<FK>>
  batch_id : uuid <<FK>>
  quantity : numeric
  unit_cost : numeric
  note : text
}

ubs ||--o{ stock_balances : has
stock_locations ||--o{ stock_balances : holds
batches ||--o{ stock_balances : balance_of

ubs ||--o{ stock_movements : records
users ||--o{ stock_movements : created_by
stock_movements ||--o{ stock_movement_items : contains
batches ||--o{ stock_movement_items : moves_batch

stock_locations ||--o{ stock_movements : source
stock_locations ||--o{ stock_movements : target

' =========================
' NOTA FISCAL (ENTRADA)
' =========================
entity "invoices" as invoices {
  *id : uuid <<PK>>
  --
  ubs_id : uuid <<FK>>
  supplier_name : text
  invoice_number : text
  series : text
  access_key : text
  issue_date : date
  receipt_date : date
  status : text  ' DRAFT/PARTIAL/FINALIZED/CANCELED
  created_by_user_id : uuid <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "invoice_items" as invoice_items {
  *id : uuid <<PK>>
  --
  invoice_id : uuid <<FK>>
  medicine_id : uuid <<FK>>
  batch_id : uuid <<FK>>
  quantity : numeric
  unit_cost : numeric
}

ubs ||--o{ invoices : has
users ||--o{ invoices : created_by
invoices ||--o{ invoice_items : contains
medicines ||--o{ invoice_items : item_of
batches ||--o{ invoice_items : received_batch

' Link conceitual: Invoice finalized => Stock Movement ENTRADA referencing it
invoices ||..o{ stock_movements : "ref (NF)"

' =========================
' PACIENTE + PRESCRIÇÃO + DISPENSAÇÃO
' =========================
entity "patients" as patients {
  *id : uuid <<PK>>
  --
  tenant_id : uuid <<FK>>
  cns : text
  cpf : text
  full_name : text
  mother_name : text
  birth_date : date
  phone : text
  --
  address_street : text
  address_number : text
  address_neighborhood : text
  address_city : text
  address_state : char(2)
  address_zip : text
  address_complement : text
  --
  is_quick_registration : bool
  created_at : timestamp
  updated_at : timestamp
}

entity "prescriptions" as prescriptions {
  *id : uuid <<PK>>
  --
  ubs_id : uuid <<FK>>
  patient_id : uuid <<FK>>
  prescriber_name : text
  prescriber_registry_type : text
  prescriber_registry_number : text
  origin_unit : text
  prescription_type : text
  prescription_date : date
  prescription_number : text
  attachment_path : text
  created_by_user_id : uuid <<FK>>
  created_at : timestamp
}

entity "dispensations" as dispensations {
  *id : uuid <<PK>>
  --
  ubs_id : uuid <<FK>>
  stock_location_id : uuid <<FK>>
  patient_id : uuid <<FK>>
  prescription_id : uuid <<FK>>
  status : text  ' CONFIRMED/CANCELED/REVERSED
  created_by_user_id : uuid <<FK>>
  created_at : timestamp
}

entity "dispensation_items" as dispensation_items {
  *id : uuid <<PK>>
  --
  dispensation_id : uuid <<FK>>
  medicine_id : uuid <<FK>>
  batch_id : uuid <<FK>>
  quantity : numeric
  lot_selection_mode : text  ' FEFO/MANUAL
  lot_change_reason : text
}

tenants ||--o{ patients : owns
patients ||--o{ prescriptions : has
ubs ||--o{ prescriptions : created_in
users ||--o{ prescriptions : created_by

patients ||--o{ dispensations : has
ubs ||--o{ dispensations : occurs_in
stock_locations ||--o{ dispensations : dispenses_from
users ||--o{ dispensations : created_by
prescriptions ||--o{ dispensations : based_on

dispensations ||--o{ dispensation_items : contains
medicines ||--o{ dispensation_items : item_of
batches ||--o{ dispensation_items : uses_batch

' Link conceitual: Dispensação confirmed => Stock Movement SAIDA referencing it
dispensations ||..o{ stock_movements : "ref (DISPENSACAO)"

' =========================
' INVENTÁRIO
' =========================
entity "inventories" as inventories {
  *id : uuid <<PK>>
  --
  ubs_id : uuid <<FK>>
  stock_location_id : uuid <<FK>>
  status : text  ' IN_PROGRESS/PENDING_APPROVAL/APPROVED/REJECTED/COMPLETED
  started_at : timestamp
  finished_at : timestamp
  created_by_user_id : uuid <<FK>>
  approved_by_user_id : uuid <<FK>>
  approval_reason : text
  created_at : timestamp
  updated_at : timestamp
}

entity "inventory_items" as inventory_items {
  *id : uuid <<PK>>
  --
  inventory_id : uuid <<FK>>
  batch_id : uuid <<FK>>
  system_quantity_snapshot : numeric
  counted_quantity : numeric
  difference_quantity : numeric
  note : text
}

ubs ||--o{ inventories : has
stock_locations ||--o{ inventories : for_location
users ||--o{ inventories : created_by
users ||--o{ inventories : approved_by
inventories ||--o{ inventory_items : contains
batches ||--o{ inventory_items : counted_batch

' Link conceitual: Inventário aprovado => Stock Movement AJUSTE referencing it
inventories ||..o{ stock_movements : "ref (INVENTARIO)"

' =========================
' ESTORNO (REVERSAL)
' =========================
entity "movement_reversals" as movement_reversals {
  *id : uuid <<PK>>
  --
  original_movement_id : uuid <<FK>>
  reversal_movement_id : uuid <<FK>>
  reason : text
  created_by_user_id : uuid <<FK>>
  created_at : timestamp
  --
  (original_movement_id) <<UQ>>
}

stock_movements ||--o{ movement_reversals : original
stock_movements ||--o{ movement_reversals : reversal
users ||--o{ movement_reversals : created_by

' =========================
' AUDITORIA
' =========================
entity "audit_logs" as audit_logs {
  *id : uuid <<PK>>
  --
  ubs_id : uuid <<FK>>
  user_id : uuid <<FK>>
  action : text
  entity_type : text
  entity_id : uuid
  before_data : jsonb
  after_data : jsonb
  ip_address : text
  created_at : timestamp
}

ubs ||--o{ audit_logs : has
users ||--o{ audit_logs : emits

@enduml
